--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.view.HomePageActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_home_page"
             android:theme="@style/Theme.TaskManager.NoActionBar">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -36,7 +34,13 @@
         </activity>
         <activity
             android:name=".ui.view.LoginActivity"
-            android:exported="false">
+            android:exported="true">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
             <meta-data
                 android:name="android.app.lib_name"
